test/negative/feature_double.java

public class feature_double {
  protected double x;
  public feature_double() {}
}

